2022-01-30  Bruno Haible  <bruno@clisp.org>

	doc: Don't leave a broken .texi file around.
	* doc/Makefile.am (poke-settings.texi): Don't create poke-settings.texi
	if the command to create it failed.
	(MOSTLYCLEANFILES): Update.

2022-01-30  Sergio Durigan Junior  <sergiodj@sergiodj.net>

	* poke/Makefile.am (dist_pkgdata_DATA): Always install
	pk-hserver.pk.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (parse_args_2): Really restore proper behavior with
	-l and unhandled exceptions.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (parse_args_2): Restore proper behavior with -l and
	unhandled exceptions.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd.h: Prototype for pk_cmd_completion_function.
	* poke/pk-cmd.c: Fix pk_cmd_find and export
	pk_cmd_completion_function.
	* poke/pk-repl.c: Adapt to new pk_cmd_find.
	* poke/pk-cmd-def.c: Fix auto-complete.
	* poke/pk-cmd-editor.c: Likewise.
	* poke/pk-cmd-help.c: Likewise.
	* poke/pk-cmd-info.c: Likewise.
	* poke/pk-cmd-ios.c: Likewise.
	* poke/pk-cmd-map.c: Likewise.
	* poke/pk-cmd-misc.c: Likewise.
	* poke/pk-cmd-set.c: Likewise.
	* poke/pk-cmd-vm.c: Likewise.
	* testsuite/poke.repl/repl.exp: Few more auto-completion tests.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.mi-json/mi-json.c (test_json_file): When libjson
	is not modern enough, report the test as `untested' and not as
	`unresolved'.

2022-01-28  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-typify.c (pkl_typify1_ps_trimmer): Restart the pass
	on creation of new AST node.
	* testsuite/poke.pkl/arrays-17.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2022-01-28  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>

	* libpoke/pkl-trans.c (pkl_trans2_ps_op_attr):
	s/assert/PKL_PASS_DONE/.
	* testsuite/poke.pkl/typeof-25.pk: New test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2022-01-27  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
