@@ -24,7 +24,8 @@ EXTRA_DIST = gen-pvm-insns.sh learn-poke-language-in-y-minutes.pk \
 
 pvm-insns.texi: $(top_srcdir)/libpoke/pvm.jitter $(srcdir)/gen-pvm-insns.sh
 	$(srcdir)/gen-pvm-insns.sh $(top_srcdir)/libpoke/pvm.jitter \
-	  > pvm-insns.texi
+	  > pvm-insns.texi-tmp
+	mv pvm-insns.texi-tmp pvm-insns.texi
 
 # The documentation for poke settings is generated by poke itself.
 # This is to avoid replication.  The documentation of the settings
@@ -76,9 +77,8 @@ pkgdata_DATA += poke.text
 EXTRA_DIST += poke.text
 
 poke.text: $(srcdir)/poke.texi
-	$(MAKEINFO) --plaintext $(srcdir)/poke.texi > poke.txmp
-	rm -f $(srcdir)/poke.text
-	mv poke.txmp $(srcdir)/poke.text
+	$(MAKEINFO) --plaintext $(srcdir)/poke.texi > poke.text-tmp
+	mv poke.text-tmp $(srcdir)/poke.text
 
 MOSTLYCLEANFILES = \
   nodelist \
