@@ -1,3 +1,11 @@
+2022-01-31  Alfred M. Szmidt  <ams@gnu.org>
+
+	* doc/gen-pvm-insns.sh: Try not to use hard coded location for
+	bash.
+	* doc/Makefile.am (pvm-insns.texi): Don't create file if the
+	command to create it failed.
+	(poke.text): Remove redundant mv/rm.
+
 2022-01-30  Bruno Haible  <bruno@clisp.org>
 
 	doc: Don't leave a broken .texi file around.
